--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python: ['3.6', '3.7']
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python }}
-    - run: python -mpip install --upgrade setuptools pip tox virtualenv
+    - run: python -m pip install --upgrade setuptools pip tox virtualenv
     - run: tox -e py
-    - run: tox -e mypy
